tests/invalid/sema/duplicate_variable.err.out
tests/invalid/sema/duplicate_variable.err.ri:3:9: error: duplicate variable `a`
      | 
    3 |     let a = 1; // fail
      |         ^             
      = note: inside function `main`
tests/invalid/sema/duplicate_variable.err.ri:7:9: error: variable `x` has the same name as an argument
      | 
    7 |     let x = 1; // fail
      |         ^             
      = note: inside function `function`
tests/invalid/sema/duplicate_variable.err.ri:11:13: error: duplicate variable `b`
      | 
   11 |         let b = 1; // fail
      |             ^             
      = note: inside function `function`
error: could not compile `duplicate_variable` module, aborting due to 3 previous errors